--- a/flipper-ir-dumps-csv/Cargo.toml
+++ b/flipper-ir-dumps-csv/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "flipper-ir-dumps-vis"
+name = "flipper-ir-dumps-csv"
 version = "0.0.0"
 edition = "2021"
 
@@ -9,4 +9,4 @@ flipper-utils = { path = "../flipper-utils" }
 
 clap.workspace = true
 color-eyre.workspace = true
-plotters = "0.3.7"
+csv = "1.3.1"
